// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero should allow children and allow pullContent attribute 1`] = `
Array [
  <div
    className="coop-c-hero coop-c-hero--pull"
  >
    <div
      className="coop-c-hero__inner"
    >
      <h1
        className="coop-c-hero__title"
      >
        title
      </h1>
      <div
        className="coop-c-hero__body"
      >
        <p>
          content
        </p>
      </div>
    </div>
  </div>,
  <div
    className="coop-c-hero__outer"
  >
    test
  </div>,
]
`;

exports[`Hero should allow cta and media components 1`] = `
Array [
  <div
    className="coop-c-hero coop-c-hero--media coop-c-hero--pull"
  >
    <div
      className="coop-c-hero__inner"
    >
      <h1
        className="coop-c-hero__title"
      >
        title
      </h1>
      <div
        className="coop-c-hero__media"
      >
        <div>
          imageplaceholder
        </div>
      </div>
      <div
        className="coop-c-hero__body"
      >
        <p>
          content
        </p>
        <div
          className="coop-c-hero__link"
        >
          <button>
            button
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="coop-c-hero__outer"
  />,
]
`;

exports[`Hero should allow squircleBg attribute 1`] = `
Array [
  <div
    className="coop-c-hero coop-c-hero--squircle"
  >
    <div
      className="coop-c-hero__inner"
    >
      <h1
        className="coop-c-hero__title"
      >
        title
      </h1>
      <div
        className="coop-c-hero__body"
      >
        <p>
          content
        </p>
      </div>
      <div
        aria-hidden="true"
        className="coop-c-hero__squircle"
      >
        <div
          className="coop-c-hero__squircle__inner"
        >
          <svg
            className="coop-c-hero__squircle__svg"
            viewBox="0 0 1802 1726"
          >
            <path
              className="coop-c-hero__squircle__path"
              d="M1743 446.3c-49.7-167.6-173.7-299.6-339.6-362C1079.6-28.2 724.1-28.2 397 84.9 232.6 146.7 109.2 278.6 58.5 446.8 19.7 581.6 0 721.4 0 862.8s19.7 281.2 58.5 416.5c50.8 167.6 174.2 299.6 339.6 362 162.2 56.2 331.5 84.7 502.9 84.7 172 0 341.3-28.4 504-85.2 164.9-62.4 288.3-193.8 338-362 39.4-135.8 59-275.6 59-416s-19.7-280.6-59-416.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="coop-c-hero__outer"
  />,
]
`;

exports[`Hero should render correctly 1`] = `
Array [
  <div
    className="coop-c-hero"
  >
    <div
      className="coop-c-hero__inner"
    >
      <h1
        className="coop-c-hero__title"
      >
        Title
      </h1>
      <div
        className="coop-c-hero__body"
      >
        <p>
          Content description
        </p>
      </div>
    </div>
  </div>,
  <div
    className="coop-c-hero__outer"
  />,
]
`;
